Trigger new deploy

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OZON! Работа</title>
+    <title>OZON! Регистрация на работу</title>
+    <!-- Trigger deploy -->
     <link rel="icon" type="image/jpeg" href="logovkladka.jpeg">
+    <link rel="stylesheet" href="style.css">
     <style>
         * {
             margin: 0;
@@ -451,6 +453,7 @@
         </div>
     </div>
     <div class="container">
+
         <div class="logo">
             <h1>Ozon</h1>
         </div>
