Fix telegram input type

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 </div>
                 <div class="form-group">
                     <label for="contact">Телеграм</label>
-                    <input type="tel" id="contact" name="contact" required>
+                    <input type="text" id="contact" name="contact" required>
                 </div>
                 <button type="submit" class="submit-button" onclick="playSound()">Подать заявку</button>
             </form>
